Added confirmation if help_link domain is not in trusted domains list. Added link to tooltip of request_help_button.